--- a/posts/templates/posts/main.html
+++ b/posts/templates/posts/main.html
@@ -13,15 +13,17 @@
                     <div class="ui grid">
                         <div class="row">
                             {% ifequal request.user obj.author.user %}
-                            <a href=""><button class="ui button bwhite-lg ">Update</button></a>
-                            <a href=""><button class="ui button bwhite-lg ">Delete</button></a>
+                            <a href="{% url 'posts:post-update' obj.pk %}"><button
+                                    class="ui button bwhite-lg ">Update</button></a>
+                            <a href="{% url 'posts:post-delete' obj.pk %}"><button
+                                    class="ui button bwhite-lg ">Delete</button></a>
                             {% endifequal %}
                         </div>
                     </div>
 
                 </div>
                 <img class="ui avatar image" src={{obj.author.avatar.url}}>
-                {{ obj.author }} - {{ obj.created|timesince}} ago
+                {{ obj.author.user }} - {{ obj.created|timesince}} ago
             </div>
             <div class="ui fluid image">
                 {% if obj.image %}
@@ -53,7 +55,7 @@
 
                 </div>
                 <button class="cmt_btn ui button mb-5">show / hide comments</button>
-                <div class="comment-box">
+                <div class="comment-box" style="display:none">
                     {% if obj.comment_set.all %}
                     {% for c in obj.comment_set.all %}
 
