--- a/statics/css/style.css
+++ b/statics/css/style.css
@@ -20,3 +20,15 @@ body {
     overflow-y: auto;
 }
 
+.mb-5{
+    margin-bottom: 5px !important;
+}
+
+.bwhite-lg{
+    background-color:transparent !important;
+    width: 10px i !important; 
+}
+
+.comment-box{
+    display: none;
+}
