--- a/profiles/templates/profiles/profile_list.html
+++ b/profiles/templates/profiles/profile_list.html
@@ -6,12 +6,44 @@ Profile list
 
 {% block content %}
 
-<ul>
-    {% for item in qs %}
+{% if is_empty %}
+    <h1>No Profiles to interact with</h1>
+{% endif %}
+{% for obj in object_list %}
+    <div class="ui segmant">
+        <div class="ui grid">
+            <div class="row">
+                <div class="three wide column">
+                        <img class="ui small circular image" src={{obj.avatar.url}}>
+                    </div>
+                <div class="thirteen wide column">
+                    <h3>{{obj.user}}</h3>
+                        <p>{{obj.bio}}</p>
+                        <button class="ui primary button mb-5 w-big">See profile</button>
+                </div>
+                <form action="" method="post">
+                    {% csrf_token %}
+                    <input type="hidden" name="profile_pk" value="{{ obj.pk }}">
+                    {% if obj.user not in rel_receiver and obj.user not in rel_sender %}
+                        <button type="submit" class="ui positive basic button mb-5 w-big"><i class="plus square icon"></i>Add to friends</button>
+                    {% endif %}
 
-    <li>{{ item }}</li>
+                </form>
+                 {% if obj.user in rel_receiver and request.user not in obj.friends.all %}
+                    <button class="ui disabled button mb-5 w-big"><i class="user icon"></i>Waiting for approval</button>
+                {% endif %}
 
-    {% endfor %}
-</ul>
+                 <form action="" method="post">
+                    {% csrf_token %}
+                     <input type="hidden" name="profile_pk" value="{{ obj.pk }}">
+                     {% if request.user in obj.friends.all %}
+                        <button type="submit" class="ui negative basic button mb-5 w-big"><i class="minus square icon"></i>Remove From friends</button>
+                     {% endif %}
+                </form>
+            </div>
+        </div>
+    </div>
+
+{% endfor %}
 
 {% endblock content %}
