--- a/profiles/templates/profiles/profile_list.html
+++ b/profiles/templates/profiles/profile_list.html
@@ -21,26 +21,21 @@ Profile list
                         <p>{{obj.bio}}</p>
                         <button class="ui primary button mb-5 w-big">See profile</button>
                     {% if obj.user not in rel_receiver and obj.user not in rel_sender %}
-                 <form action="{% url 'profiles:send-invite' %}" method="POST">
-                    {% csrf_token %}
-                    <input type="hidden" name="profile_pk" value="{{ obj.pk }}">
-
-                        <button type="submit" class="ui positive basic button mb-5 w-big"><i class="plus square icon"></i>Add to friends</button>
-
-
-                </form>
+                        <form action="{% url 'profiles:send-invite' %}" method="POST">
+                            {% csrf_token %}
+                            <input type="hidden" name="profile_pk" value="{{ obj.pk }}">
+                            <button type="submit" class="ui positive basic button mb-5 w-big"><i class="plus square icon"></i>Add to friends</button>
+                        </form>
                     {% endif %}
-                 {% if obj.user in rel_receiver and request.user not in obj.friends.all %}
-                    <button class="ui disabled button mb-5 w-big"><i class="user icon"></i>Waiting for approval</button>
-                {% endif %}
- {% if request.user in obj.friends.all %}
-                 <form action="" method="post">
-                    {% csrf_token %}
-                     <input type="hidden" name="profile_pk" value="{{ obj.pk }}">
-
-                        <button type="submit" class="ui negative basic button mb-5 w-big"><i class="minus square icon"></i>Remove From friends</button>
-
-                </form>
+                    {% if obj.user in rel_receiver and request.user not in obj.friends.all %}
+                        <button class="ui disabled button mb-5 w-big"><i class="user icon"></i>Waiting for approval</button>
+                    {% endif %}
+                    {% if request.user in obj.friends.all %}
+                        <form action="{% url 'profiles:remove-friend' %}" method="POST">
+                            {% csrf_token %}
+                            <input type="hidden" name="profile_pk" value="{{ obj.pk }}">
+                            <button type="submit" class="ui negative basic button mb-5 w-big"><i class="minus square icon"></i>Remove From friends</button>
+                        </form>
                     {% endif %}
                 </div>
             </div>
