Add some styles

--- a/statics/css/style.css
+++ b/statics/css/style.css
@@ -24,6 +24,10 @@ body {
     margin-bottom: 5px !important;
 }
 
+.w-big{
+    width:200px !important;
+}
+
 .bwhite-lg{
     background-color:transparent !important;
     width: 10px i !important; 
