--- a/profiles/templates/profiles/profile_list.html
+++ b/profiles/templates/profiles/profile_list.html
@@ -19,8 +19,8 @@ Profile list
                 <div class="thirteen wide column">
                     <h3>{{obj.user}}</h3>
                         <p>{{obj.bio}}</p>
-                        <button class="ui primary button mb-5 w-big">See profile</button>
-                    <br />
+                        <a href={{obj.get_absolute_url}}><button class="ui primary button mb-5 w-big">See profile</button></a>
+                    <br>
                     {% if obj.user not in rel_receiver and obj.user not in rel_sender %}
                         <form action="{% url 'profiles:send-invite' %}" method="POST">
                             {% csrf_token %}
