--- a/templates/main/home.html
+++ b/templates/main/home.html
@@ -1,19 +1,38 @@
-{% extends 'base.html' %}
-
-{% block title %}
-home
-{% endblock title %}
+{% extends 'base.html'%}
+{% load static %}
+{% block extracss %}
+<link rel="stylesheet" href={% static "css/bird.css" %}>
+{% endblock %}
 
 {% block content %}
-{{hello}}
-<br>
-{{user}}
-{% endblock content %}
 
-{% block scripts %}
-<script>
-$(document).ready(function(){
-    console.log('working')
-})
-</script>
-{% endblock scripts %}
+<div class="display-3"> Welcome to Social Network </div>
+<hr>
+<div class="globe">
+    <div class="bird">
+        <div class="body">
+            <div class="eye left"></div>
+            <div class="eye right"></div>
+            <div class="beak">
+                <div></div>
+            </div>
+            <div class="feet"></div>
+            <div class="wire"></div>
+        </div>
+        <div class="hills"></div>
+        <div class="cloud"></div>
+        <div class="cloud small"></div>
+    </div>
+</div>
+{% if user.is_authenticated %}
+<div class="display-4"> Hey {{user.username}}!</div>
+{% else %}
+<div>
+    <br>
+    <br>
+    <a class="btn btn-primary btn-lg" href="{% url 'account_login' %}">Login </a>&nbsp;&nbsp;
+    <a class="btn btn-success btn-lg" href="{% url 'account_signup' %}">Signup </a>
+</div>
+{% endif %}
+
+{% endblock %}
