--- a/templates/main/navbar.html
+++ b/templates/main/navbar.html
@@ -6,49 +6,53 @@
 {% url 'profiles:all-profiles-view' as path_to_all_profiles %}
 
 <div class="ui inverted menu nav mb-7">
-  <div class="ui container">
+    <div class="ui container">
 
-    <a href="{{path_to_home}}" class="{% if request.path == path_to_home %}active{% endif %} item">
-        <h3>Social Network</h3>
-    </a>
+        <a href="{{path_to_home}}" class="{% if request.path == path_to_home %}active{% endif %} item">
+            <h3>Social Network</h3>
+        </a>
 
-    {% if request.user.is_authenticated %}
-    <a href="{{path_to_posts}}" class="{% if request.path == path_to_posts %}active{% endif %} item">
-        Board
-    </a>
-    {% endif %}
-
-    <div class="right menu">
         {% if request.user.is_authenticated %}
+        <a href="{{path_to_posts}}" class="{% if request.path == path_to_posts %}active{% endif %} item">
+            Board
+        </a>
+        {% endif %}
+
+        <div class="right menu">
+            {% if request.user.is_authenticated %}
 
             <div class="item">
 
                 <div class="btn-group">
-                      <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Friends
-                      </button>
-                      <div class="dropdown-menu">
-                            <a href="{{path_to_all_profiles}}" class="{% if request.path == path_to_all_profiles %}active{% endif %} dropdown-item py-2">
-                                All Profiles
-                            </a>
-                            <a href="{{path_to_invites}}" class="{% if request.path == path_to_invites %}active{% endif %} dropdown-item py-2">
+                    <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="false">
+                        Friends
+                    </button>
+                    <div class="dropdown-menu">
+                        <a href="{{path_to_all_profiles}}"
+                            class="{% if request.path == path_to_all_profiles %}active{% endif %} dropdown-item py-2">
+                            All Profiles
+                        </a>
+                        <a href="{{path_to_invites}}"
+                            class="{% if request.path == path_to_invites %}active{% endif %} dropdown-item py-2">
                             Send Invites
-                            </a>
-                            <a href="{{path_to_my_invites}}" class="{% if request.path == path_to_my_invites %}active{% endif %} dropdown-item py-2">
-                                Received Invites &nbsp; <div class="badge badge-info">{{invites_num}}</div>
-                            </a>
-                      </div>
+                        </a>
+                        <a href="{{path_to_my_invites}}"
+                            class="{% if request.path == path_to_my_invites %}active{% endif %} dropdown-item py-2">
+                            Received Invites &nbsp; <div class="badge badge-info">{{invites_num}}</div>
+                        </a>
+                    </div>
                 </div>
 
             </div>
 
             <div class="item">
                 <form action="" method="GET">
-                    {%  csrf_token %}
+                    {% csrf_token %}
                     <div class="ui action left icon input">
-                    <input class="prompt" type="text" name='q' placeholder="name of a friend...">
-                    <i class="search icon"></i>
-                    <button type='submit' class="ui button">Search</button>
+                        <input class="prompt" type="text" name='q' placeholder="name of a friend...">
+                        <i class="search icon"></i>
+                        <button type='submit' class="ui button">Search</button>
                     </div>
                 </form>
             </div>
@@ -58,11 +62,21 @@
                 {{ request.user }}
             </a>
 
-            <a href="{% url 'account_logout' %}" class="ui item">Logout</a>
-        {% else %}
-            <a href="{% url 'account_login' %}" class="ui item">Login</a>
-        {% endif %}
+            <div class="item">
+                <form method="post" action="{% url 'account_logout' %}">
+                    {% csrf_token %}
+                    {% if redirect_field_value %}
+                    <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+                    {% endif %}
+                    <button href="{% url 'account_logout' %}" class="ui item" style="border:none">Sign out</button>
 
+                </form>
+            </div>
+
+            {% else %}
+            <a href="{% url 'account_login' %}" class="ui item"> Login</a>
+            {% endif %}
+
+        </div>
     </div>
-  </div>
 </div>
