add group with CR operations and relationship with posts

--- a/templates/main/home.html
+++ b/templates/main/home.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 
-<div class="display-3"> Welcome to Social Network </div>
+<h2 class=""> Welcome to Social Network </h2>
 <hr>
 <div class="globe">
     <div class="bird">
