--- a/posts/templates/posts/update.html
+++ b/posts/templates/posts/update.html
@@ -7,6 +7,7 @@
     <form action="" method="post" class="ui form" enctype="multipart/form">
         {% csrf_token %}
         {{ form }}
+        count: {{post.group.members.user}}
         <button type="submit" class="ui button primary mt-5">Update</button>
     </form>
 </div>
