--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+{% load crispy_forms_tags %}
 {% load i18n %}
 
 {% block head_title %}{% trans "Signup" %}{% endblock %}
@@ -20,5 +20,7 @@
     </form>
   </div>
 </div>
+{{hello}}
+
 
 {% endblock %}
