--- a/posts/templates/posts/main.html
+++ b/posts/templates/posts/main.html
@@ -9,28 +9,31 @@
         <div class="ui fluid card">
             <div class="content">
                 <div class="right floated meta">
+                    
                     <div class="row">
+
                         {% ifequal request.user obj.author.user %}
                         <div class="col-md-6 p-0 m-0">
-                            <a class="ml-3" href="{% url 'posts:post-update' obj.pk %}">
+                            <a class="ml-3" href='{% url "posts:post-update" obj.pk %}'>
                                 <button class="btn btn-warning "> <i class="thumbs edit icon"></i> Update</button>
                             </a>
                         </div>
                         <div class="col-md-6 p-0 m-0">
-                            <a class="ml-3" href="{% url 'posts:post-delete' obj.pk %}">
+                            <a class="ml-3" href='{% url "posts:post-delete" obj.pk %}'>
                                 <button class="btn btn-danger"> <i class="thumbs trash icon"></i> Delete</button>
                             </a>
                         </div>
-
                         {% endifequal %}
+
                     </div>
 
                 </div>
+
                 <img class="ui avatar image" src={{obj.author.avatar.url}}>
                 <h5 class="d-inline-block mt-2">
                     {{ obj.author.user }} - {{ obj.created|timesince}} ago 
                     {% if obj.group %}
-                        ><a href="{% url 'groups:single' slug=obj.group.slug%}"> {{obj.group.name}}</a>
+                        > <a href="{% url 'groups:single' slug=obj.group.slug %}"> {{obj.group.name}}</a>
                     {% endif %}
                 </h5>
             </div>
