--- a/profiles/templates/profiles/profile_list.html
+++ b/profiles/templates/profiles/profile_list.html
@@ -42,7 +42,7 @@ Profile list
                             {% csrf_token %}
                             <input type="hidden" name="profile_pk" value="{{ obj.pk }}">
                             <textarea name="message" id="" cols="30" rows="10"></textarea>
-                            <button type="submit" class="ui positive button mt-3 w-full click"><i class="thumbs send icon"></i>Send</button>
+                            <button type="submit" class="ui positive button mt-3 w-full click">cle<i class="thumbs send icon"></i>Send</button>
                         </form>
                     {% endif %}
                 </div>
