--- a/templates/main/home.html
+++ b/templates/main/home.html
@@ -6,8 +6,8 @@
 
 {% block content %}
 
-<h2 class=""> Welcome to Social Network </h2>
-<hr>
+<h2 class="my-4"> Welcome to Social Network </h2>
+
 <div class="globe">
     <div class="bird">
         <div class="body">
