--- a/groups/templates/groups/group_base.html
+++ b/groups/templates/groups/group_base.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <div class="container">
-    <div class="row">
+    <div class="">
      {% block pregroup%} {% endblock %}
      {% block group_content%} {% endblock %}
      {% block postgroup%} {% endblock %}
