--- a/groups/templates/groups/group_list.html
+++ b/groups/templates/groups/group_list.html
@@ -2,48 +2,55 @@
 
 {% block pregroup %}
 
-<div class="content">
+<div class="content mt-5 text-center">
     {% if user.is_authenticated %}
     <h1> Welcome back
         <a href='{% url "posts:main-post-view" %}'>
-            @{{user.username}}&nbsp;&nbsp;
+            {{user.username}}
         </a>
+        , manage your group
     </h1>
     {% endif %}
-    <br>
 </div>
-<div class="createnewgrpbtn">
+<br>
+<div class="createnewgrpbtn my-4">
     {% if user.is_authenticated%}
-    <a href={% url "groups:create" %} class="btn btn-lg btn-warning"><span class="fa fa-plus"
-            aria-hidden="true"></span>Create new group</a>
+    <a href={% url "groups:create" %} class="btn btn-lg btn-warning">
+        <i class="thumbs add icon"></i>Create new group
+    </a>
     {% endif %}
 </div>
 {% endblock %}
 {% block group_content %}
-<div class="list-group flex-container">
-    {% for group in object_list %}
-    <a href="{% url 'groups:single' slug=group.slug%}">
-        <h3> {{group.name}}</h3>
-    </a>
-    <div class="container-fluid">
-        <h4>
-            {{group.description_html|safe}}</h4>
-        <div class="row">
-            <div class="col-md-4">
-                <span class="badge">
-                    <h4> {{group.members.count}}
-                </span>member{{group.members.count|pluralize}}</h4>
-            </div>
-            <div class="col-md-4">
-                <span class="badge">
-                    <h4> {{group.posts.count}}
-                </span>post{{group.posts.count|pluralize}}</h4>
-            </div>
-        </div>
-        <br>
-        <br>
-    </div>
-    {% endfor %}
-    <br>
+    <div class="list-group flex-container">
+        <table class="table" style="font-size: 18px">
+      <thead class="thead-dark">
+        <tr>
+          <th scope="col">Name</th>
+          <th scope="col">Description</th>
+          <th scope="col">No. Members</th>
+          <th scope="col">No. Posts</th>
+        </tr>
+      </thead>
+      <tbody>
+            {% for group in object_list %}
+                <tr>
+                    <td scope="row">
+                        <a href="{% url 'groups:single' slug=group.slug%}" style="color: #000; font-weight: bold">
+                            <span class="badge badge-danger px-3 py-2">{{group.name}}</span>
+                        </a>
+                    </td>
+
+                    <td>{{group.description_html|safe}}</td>
+
+                    <td>{{group.members.count}} member{{group.members.count|pluralize}}</td>
+
+                    <td>{{group.posts.count}} post{{group.posts.count|pluralize}}</td>
+
+                </tr>
+            {% endfor %}
+      </tbody>
+    </table>
+
 </div>
 {% endblock %}
