--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -1,4 +1,8 @@
 {% extends "base.html" %}
+{% load static %}
+{% block extracss %}
+<link rel="stylesheet" href={% static "css/bird.css" %}>
+{% endblock %}
 
 {% load i18n %}
 {% load account socialaccount %}
@@ -7,33 +11,34 @@
 
 {% block content %}
 
-<h1>{% trans "Sign In" %}</h1>
 
-{% get_providers as socialaccount_providers %}
+<div class="row" style="margin-top: 100px">
+  <div class="col-md-6" style="text-align: left">
+    <h1 class="mt-4">{% trans "Sign In" %}</h1>
 
-{% if socialaccount_providers %}
-<p>{% blocktrans with site.name as site_name %}Please sign in with one
-of your existing third party accounts. Or, <a href="{{ signup_url }}">sign up</a>
-for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
+    {% get_providers as socialaccount_providers %}
 
-<div class="socialaccount_ballot">
+    {% if socialaccount_providers %}
+    <p >{% blocktrans with site.name as site_name %}Please sign in with one
+    of your existing third party accounts. Or, <a href="{{ signup_url }}">sign up</a>
+    for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
 
-  <ul class="socialaccount_providers">
-    {% include "socialaccount/snippets/provider_list.html" with process="login" %}
-  </ul>
+    <div class="socialaccount_ballot">
 
-  <div class="login-or">{% trans 'or' %}</div>
+      <ul class="socialaccount_providers">
+        {% include "socialaccount/snippets/provider_list.html" with process="login" %}
+      </ul>
 
-</div>
+      <div class="login-or">{% trans 'or' %}</div>
 
-{% include "socialaccount/snippets/login_extra.html" %}
+    </div>
 
-{% else %}
-<p>{% blocktrans %}If you have not created an account yet, then please
-<a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
-{% endif %}
-<div class="ui grid">
-  <div class="six wide column">
+    {% include "socialaccount/snippets/login_extra.html" %}
+
+    {% else %}
+    <p>{% blocktrans %}If you have not created an account yet, then please
+    <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
+    {% endif %}
     <form class="login ui form" method="POST" action="{% url 'account_login' %}">
       {% csrf_token %}
       {{ form.as_p }}
@@ -41,9 +46,29 @@ for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
       <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
       {% endif %}
       <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-      <button class="ui button secondary" type="submit">{% trans "Sign In" %}</button>
+      <br>
+      <button class="ui button secondary mt-4" type="submit">{% trans "Sign In" %}</button>
     </form>
   </div>
+  <div class="col-md-6">
+    <div class="globe">
+    <div class="bird">
+        <div class="body">
+            <div class="eye left"></div>
+            <div class="eye right"></div>
+            <div class="beak">
+                <div></div>
+            </div>
+            <div class="feet"></div>
+            <div class="wire"></div>
+        </div>
+        <div class="hills"></div>
+        <div class="cloud"></div>
+        <div class="cloud small"></div>
+    </div>
 </div>
+  </div>
+</div>
+
 
 {% endblock %}
