--- a/templates/main/navbar.html
+++ b/templates/main/navbar.html
@@ -49,13 +49,22 @@
 
 
             <div class="item">
-                <li class="dropdown"><a class="dropdown-toggle" id="link" data-toggle="dropdown" href="#">Group <span
-                            class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li id="post1"><a href="{% url 'groups:all' %}">All Groups</a></li>
-                        <li id="post1"><a href="{% url 'groups:create' %}">New Group</a></li>
-                    </ul>
-                </li>
+
+                <div class="btn-group">
+                    <button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="false">
+                        Group
+                    </button>
+                    <div class="dropdown-menu">
+                        <a href="{% url 'groups:all' %}" class="dropdown-item py-2">
+                            All Groups
+                        </a>
+                        <a href="{% url 'groups:create' %}" class="dropdown-item py-2">
+                            New Group
+                        </a>
+                    </div>
+                </div>
+
             </div>
 
 
