add title for pages

--- a/groups/templates/groups/group_detail.html
+++ b/groups/templates/groups/group_detail.html
@@ -1,5 +1,7 @@
 {% extends "groups/group_base.html"%}
 
+{% block title %}{{group.name}}{% endblock title %}
+
 {% block pregroup %}
 <div class="col-md-8">
     <h1><U> {{group.name}}</U></h1><br><br>
