--- a/groups/templates/groups/group_list.html
+++ b/groups/templates/groups/group_list.html
@@ -1,5 +1,7 @@
 {% extends "groups/group_base.html"%}
 
+{% block title %}All Groups{% endblock title %}
+
 {% block pregroup %}
 
 <div class="content mt-5 text-center">
