--- a/templates/main/home.html
+++ b/templates/main/home.html
@@ -3,7 +3,7 @@
 {% block extracss %}
 <link rel="stylesheet" href={% static "css/bird.css" %}>
 {% endblock %}
-
+{% block title %}Home Page{% endblock title %}
 {% block content %}
 
 <h2 class="my-4"> Welcome to Social Network </h2>
