add group admin

--- a/templates/main/navbar.html
+++ b/templates/main/navbar.html
@@ -51,7 +51,7 @@
             <div class="item">
 
                 <div class="btn-group">
-                    <button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown"
+                    <button type="button" class="btn btn-warning dropdown-toggle" data-toggle="dropdown"
                         aria-haspopup="true" aria-expanded="false">
                         Group
                     </button>
@@ -61,6 +61,9 @@
                         </a>
                         <a href="{% url 'groups:create' %}" class="dropdown-item py-2">
                             New Group
+                        </a>
+                        <a href="{% url 'groups:mygroup' %}" class="dropdown-item py-2">
+                            My Group
                         </a>
                     </div>
                 </div>
