--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -20,7 +20,7 @@
 
     {% if socialaccount_providers %}
     <p >{% blocktrans with site.name as site_name %}Please sign in with one
-    of your existing third party accounts. Or, <a href="{{ signup_url }}">sign up</a>
+    of your existing third party accounts. Or, <a class="btn btn-secondary" href="{{ signup_url }}">Sign up</a>
     for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
 
     <div class="socialaccount_ballot">
@@ -37,7 +37,7 @@
 
     {% else %}
     <p>{% blocktrans %}If you have not created an account yet, then please
-    <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
+    <a class="btn btn-secondary" href="{{ signup_url }}">Sign up</a> first.{% endblocktrans %}</p>
     {% endif %}
     <form class="login ui form" method="POST" action="{% url 'account_login' %}">
       {% csrf_token %}
@@ -47,7 +47,7 @@
       {% endif %}
       <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
       <br>
-      <button class="ui button secondary mt-4" type="submit">{% trans "Sign In" %}</button>
+      <button class="ui button primary mt-4" type="submit">{% trans "Sign In" %}</button>
     </form>
   </div>
   <div class="col-md-6">
