--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -13,7 +13,7 @@
   <div class="col-md-6" style="text-align: left">
     <h1>{% trans "Sign Up" %}</h1>
 
-    <p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
+    <p>{% blocktrans %}Already have an account? Then please <a class="btn btn-secondary" href="{{ login_url }}">Sign in</a>.{% endblocktrans %}</p>
     <div class="">
         <form class="signup ui form" id="signup_form" method="post" action="{% url 'account_signup' %}">
           {% csrf_token %}
