--- a/templates/main/navbar.html
+++ b/templates/main/navbar.html
@@ -16,6 +16,12 @@
         <a href="{{path_to_posts}}" class="{% if request.path == path_to_posts %}active{% endif %} item">
             NewsFeed
         </a>
+            
+        {% if request.user.is_staff %}
+        <a href="/admin" class="btn btn-dark mt-2" style="height: 50px;">
+            Admin Panal
+        </a>
+    {% endif %}
         {% endif %}
 
         <div class="right menu">
