--- a/templates/main/navbar.html
+++ b/templates/main/navbar.html
@@ -39,10 +39,10 @@
                             class="{% if request.path == path_to_all_profiles %}active{% endif %} dropdown-item py-2">
                             All Profiles
                         </a>
-                        <a href="{{path_to_invites}}"
+                        <!-- <a href="{{path_to_invites}}"
                             class="{% if request.path == path_to_invites %}active{% endif %} dropdown-item py-2">
                             Send Invites
-                        </a>
+                        </a> -->
                         <a href="{{path_to_my_invites}}"
                             class="{% if request.path == path_to_my_invites %}active{% endif %} dropdown-item py-2">
                             Received Invites &nbsp; <div class="badge badge-info">{{invites_num}}</div>
